@@ -867,14 +867,14 @@ test wm-iconphoto-1.1 {usage} -returnCodes error -body {
 } -result {wrong # args: should be "wm option window ?arg ...?"}
 test wm-iconphoto-1.2 {usage} -returnCodes error -body {
     wm iconphoto .
-} -result {wrong # args: should be "wm iconphoto window ?-default? image ?image ...?"}
+} -result {wrong # args: should be "wm iconphoto window ?-default? image1 ?image2 ...?"}
 test wm-iconphoto-1.3 {usage} -returnCodes error -body {
     wm iconphoto . notanimage
 } -result {can't use "notanimage" as iconphoto: not a photo image}
 test wm-iconphoto-1.4 {usage} -returnCodes error -body {
     # we currently have no return info
     wm iconphoto . -default
-} -result {wrong # args: should be "wm iconphoto window ?-default? image ?image ...?"}
+} -result {wrong # args: should be "wm iconphoto window ?-default? image1 ?image2 ...?"}
 
 # All other iconphoto tests are platform specific
 
